fix the sequence of links

--- a/clanok.tex
+++ b/clanok.tex
@@ -102,6 +102,5 @@ Cesta spoločnosti Netflix k personalizácii sa začína zberom údajov. A nejde
 Odporúčací systém Netflix je zložitý mechanizmus na spracovanie veľkého množstva údajov a preferencií používateľov. Je to kľúčový nástroj na udržanie záujmu používateľov a na to, aby sa nestratili v obrovskej knižnici obsahu.
 
 \bibliography{literatura}
-\bibliographystyle{plain}
-%\printbibliography
+\bibliographystyle{unsrt} 
 \end{document}
