Presentaion/small fixes

--- a/136170_Prezentacia/prezentacia.tex
+++ b/136170_Prezentacia/prezentacia.tex
@@ -29,7 +29,7 @@
 
 \begin{frame}{Ciel Netflix}
     \begin{itemize}
-        \item Cieľom spoločnosti Netflix je použivať» odporúčacie algoritmy na maximalizáciu spokojnosti používateľov.
+        \item Cieľom spoločnosti Netflix je použivať odporúčacie algoritmy na maximalizáciu spokojnosti používateľov.
         \item Presná personalizácia.
         \item Úspech Netflix je do veľkej miery pripisovaný jeho pokročilým odporúčacím algoritmom.
     \end{itemize}
@@ -92,8 +92,6 @@
 \begin{frame}{Types of ranking}
     \includegraphics[scale=0.5]{Images_tables/table.png}
 \end{frame}
-
-\section{Diagram: Odporúčací pracovný tok}
 
 \section{Záver}
 
