final version of the article

--- a/literatura.bib
+++ b/literatura.bib
@@ -75,3 +75,91 @@
     howpublished = "\url{https://www.theproductfolks.com/product-management-blog/unlocking-viewer-engagement-how-netflix-uses-data-to-win-over-230-million-users-worldwide}",
 
 }
+
+@misc{AI,
+    author = {Argoid TEam},
+    title = {How Netflix Uses Artificial Intelligence},
+    howpublished = "\url{https://www.argoid.ai/blog/netflix-ai}",
+
+}
+
+@misc{AI_KS,
+    author = {LITSLINK},
+    title = {Netflix and Learn: How Netflix Uses AI to Personalize Recommendations},
+    month = {August},
+    year = {2024},
+    howpublished = "\url{https://litslink.com/blog/all-about-netflix-artificial-intelligence-the-truth-behind-personalized-content#:~:text=Through%20ML%20algorithms%2C%20Netflix%20continuously,while%20minimizing%20buffering%20and%20interruptions.}",
+
+}
+
+@misc{AI_KK,
+    author = {NETFLIX},
+    title = {Optimizing Content Quality Control at Netflix with Predictive Modeling},
+    month = {December},
+    year = {2024},
+    howpublished = "\url{https://netflixtechblog.com/optimizing-content-quality-control-at-netflix-with-predictive-modeling-712281658ab9}",
+
+}
+
+@misc{Typy_Odp,
+    author = {Puneet Mangla},
+    title = {Netflix Movies and Series Recommendation Systems},
+    month = {July},
+    year = {2023},
+    howpublished = "\url{https://pyimagesearch.com/2023/07/03/netflix-movies-and-series-recommendation-systems/}",
+
+}
+
+@misc{Typy_Odp_Ai,
+    author = {Zhong Hong},
+    title = {Personalized Recommendations: How Netflix and Amazon Use Deep Learning to Enhance User Experience},
+    month = {April},
+    year = {2023},
+    howpublished = "\url{https://medium.com/@zhonghong9998/personalized-recommendations-how-netflix-and-amazon-use-deep-learning-to-enhance-user-experience-e7bd6fcd18ff}",
+
+}
+
+@misc{Coll_Filter,
+    author = {CodeStax.Ai},
+    title = {Creating Netflix-Worthy Recommendations: The Collaborative Filtering Revolution},
+    month = {September},
+    year = {2023},
+    howpublished = "\url{https://codestax.medium.com/creating-netflix-worthy-recommendations-the-collaborative-filtering-revolution-a1765c5daec4}",
+
+}
+
+@misc{Obs_Filter,
+    author = {Shrishail Kandi},
+    title = {Content based movie recommendation system for Netflix using natural language processing},
+    month = {June},
+    year = {2021},
+    howpublished = "\url{https://shrishailkandi95.medium.com/content-based-movie-recommendation-system-for-netflix-using-natural-language-processing-53fdbcf94417}",
+
+}
+
+@misc{Ranking,
+    author = {Nihal D'Souza},
+    title = {How do Netflix recommendations work?},
+    month = {January},
+    year = {2021},
+    howpublished = "\url{https://nihaldsouza.medium.com/how-do-netflix-recommendations-work-a24385f66d80}",
+
+}
+
+@misc{Type:data,
+    author = {Lineate},
+    title = {5 Ways Netflix Uses Data to Win the World of Streaming Entertainment},
+    month = {February},
+    year = {2019},
+    howpublished = "\url{https://www.lineate.com/blog/5-ways-netflix-uses-data-to-win}",
+
+}
+
+@misc{Type:data_hd,
+    author = {Kamaljeet Kaur},
+    title = {Behind the Screen: How Netflix Uses Data Science?},
+    month = {Aughust},
+    year = {2024},
+    howpublished = "\url{https://www.analyticsvidhya.com/blog/2024/07/netflix-uses-data-science/#:~:text=Netflix%20uses%20its%20data%20to,and%20decide%20on%20content%20investments.}",
+
+}
