--- a/literatura.bib
+++ b/literatura.bib
@@ -1,7 +1,7 @@
 @misc{Netflix:Algorithm,
 	author = {Arkadiusz Krysik},
 	title = {Netflix Algorithm: How Netflix Uses AI to Improve Personalization},
-    month = {June},
+    month = {jun.},
     year = {2024},
     howpublished = "\url{https://stratoflow.com/how-netflix-recommendation-algorithm-work/}",
 }
@@ -9,157 +9,151 @@
 @misc{Netflix:Recommendation:System,
     author = {Arkadiusz Krysik},
     title = {Netflix Algorithm: Everything You Need to Know About the Recommendation System of the Most Popular Streaming Portal},
-    month = {August},
+    month = {aug.},
     year = {2021},
     howpublished = "\url{https://recostream.com/blog/recommendation-system-netflix}",
 }
 
-@misc{Bennett,
-    author = {James Bennett and Stan Lanning},
-    title = {An Introduction to Recommender Systems at Netflix},
-    year = {2019},
-    howpublished = "\url{https://arxiv.org/abs/1903.04638%7D}",
+@article{Filtracne:algoritmy,
+author = {Su, Xiaoyuan and Khoshgoftaar, Taghi},
+title = {A Survey of Collaborative Filtering Techniques},
+journal = {Adv. Artificial Intellegence},
+volume = {2009},
+month = {okt.},
+year = {2009},
+pages = {},
 }
 
-@misc{Habr, 
-    author = {Yakov Livshits}, 
-    title = {How Netflix’s Recommendation Algorithm Works: A Look Behind the Scenes}, 
-    month = {July},
-    year = {2022},
-    howpublished = "\url{https://habr.com/en/articles/677396/}",
+@article{AI,
+author = {Bogdan Walek and Vladimir Fojtik},
+title = {A hybrid recommender system for recommending relevant movies using an expert system},
+journal = {Expert Systems with Applications},
+volume = {158},
+month = {nov.},
+year = {2020},
+pages = {113452},
+url = {https://www.sciencedirect.com/science/article/pii/S0957417420302761},
 }
 
-@misc{Collaborative:Filtering, 
-    author = {Prem Kumar}, 
-    title = {Netflix Movie Recommendation — Using Collaborative Filtering}, 
-    howpublished = "\url{https://towardsdatascience.com/tensorflow-for-recommendation-model-part-1-19f6b6dc207d}",
+@article{AI_deep:lerning, 
+author={Steck, Harald and Baltrunas, Linas and Elahi, Ehtsham and Liang, Dawen and Raimond, Yves and Basilico, Justin}, 
+title={Deep Learning for Recommender Systems: A Netflix Case Study}, 
+journal={AI Magazine}, 
+volume={42}, 
+month={nov.}, 
+year={2021}, 
+pages={7-18}, 
+url={https://ojs.aaai.org/aimagazine/index.php/aimagazine/article/view/18140},
 }
 
-@misc{Linkedin, 
-    author = {Sachin Sharma}, 
-    title = {The Magic of Recommendation Systems: How Netflix Knows What You Like}, 
-    month = {February},
-    year = {2024},
-    howpublished = "\url{https://www.linkedin.com/pulse/magic-recommendation-systems-how-netflix-knows-what-you-sachin-b9gzc}",
+@article{Chladny:start,
+author = {Mekala, Sreenivas and Reddy, Ch and Kumar, V and Reddy, D},
+title = {TO SOLVE COLD START PROBLEM IN COLLABORATIVE FILTERING RECOMMENDER SYSTEM},
+volume = {12},
+month = {jun.},
+year = {2023},
+pages = {458-463},
+journal = {},
 }
 
-@misc{Argoid,
-    author = {Argoid Team},
-    title = {How Does Netflix's Recommendation Engine Work?},
-    month = {July},
-    year = {2024},
-    howpublished = "\url{https://www.argoid.ai/blog/how-does-netflixs-recommendation-engine-work.}",
-
+@inproceedings{Odp:sys,
+author = {Saha, Souptik and Ramamoorthy, S.},
+title = {User Centric and Collaborative Movie Recommendation System Under Customized Platforms},
+month = {may},
+year = {2021},
+pages = {699-704},
+booktitle = {},
 }
 
-@misc{Ranking:System,
-    author = {David Chong},
-    title = {Deep Dive into Netflix’s Recommender System},
-    howpublished = "\url{https://readmedium.com/deep-dive-into-netflixs-recommender-system-341806ae3b48}",
-}
-
-@misc{Top,
-    author = {Arkadiusz Krysik},
-    title = {Inside the Netflix Algorithm: AI’s Role in Personalizing User Experience},
-    month = {August},
-    year = {2024},
-    howpublished = "\url{https://stratoflow.com/how-netflix-recommendation-syworks/}",
-
-}
-
-@misc{Data,
-    author = {The Product Folks Team},
-    title = {Unlocking Viewer Engagement: How Netflix Uses Data to Win Over 230+ Million Users Worldwide},
-    month = {August},
-    year = {2024},
-    howpublished = "\url{https://www.theproductfolks.com/product-management-blog/unlocking-viewer-engagement-how-netflix-uses-data-to-win-over-230-million-users-worldwide}",
-
-}
-
-@misc{AI,
-    author = {Argoid TEam},
-    title = {How Netflix Uses Artificial Intelligence},
-    howpublished = "\url{https://www.argoid.ai/blog/netflix-ai}",
+@inproceedings{Fil:alg:colab,
+author = {Hu, Yifan and Koren, Yehuda and Volinsky, Chris},
+title = {Collaborative Filtering for Implicit Feedback Datasets},
+journal = {Proceedings - IEEE International Conference on Data Mining, ICDM},
+month = {dec.},
+year = {2008},
+pages = {263-272},
+booktitle = {},
 
 }
 
-@misc{AI_KS,
-    author = {LITSLINK},
-    title = {Netflix and Learn: How Netflix Uses AI to Personalize Recommendations},
-    month = {August},
-    year = {2024},
-    howpublished = "\url{https://litslink.com/blog/all-about-netflix-artificial-intelligence-the-truth-behind-personalized-content#:~:text=Through%20ML%20algorithms%2C%20Netflix%20continuously,while%20minimizing%20buffering%20and%20interruptions.}",
+@article{Fil:alg:typy,
+author = {Phalle, Ms and Bhushan, Prof},
+title = {Content Based Filtering And Collaborative Filtering: A Comparative Study},
+journal = {Journal of Advanced Zoology},
+volume = {45},
+month = {mar.},
+year = {2024},
+pages = {96-100},
+}
+
+@book{Hodnotenie,
+author = {Elahi, Mehdi and Beheshti, Amin and Goluguri, Srinivasa},
+month = {jul.},
+year = {2021},
+title = {Recommender Systems: Challenges and Opportunities in the Age of Big Data and Artificial Intelligence},
+publisher = {},
+}
+
+@inproceedings{Data,
+author = {Baltrunas, Linas},
+title = {Exploiting contextual information in recommender systems},
+journal = {RecSys'08: Proceedings of the 2008 ACM Conference on Recommender Systems},
+month = {okt.},
+year = {2008},
+pages = {295-298},
+booktitle = {},
 
 }
 
-@misc{AI_KK,
-    author = {NETFLIX},
-    title = {Optimizing Content Quality Control at Netflix with Predictive Modeling},
-    month = {December},
-    year = {2024},
-    howpublished = "\url{https://netflixtechblog.com/optimizing-content-quality-control-at-netflix-with-predictive-modeling-712281658ab9}",
+@article{Zaver,
+author = {Singh, Pradeep and Dutta Pramanik, Pijush and Dey, Avick and Choudhury, Prasenjit},
+title = {Recommender Systems: An Overview, Research Trends, and Future Directions},
+journal = {International Journal of Business and Systems Research},
+volume = {15},
+month = {feb.},
+year = {2021},
+pages = {14–52},
+}
+
+@article{Odp:alg:sys,
+author = {Huang, Jinchao and Xie, Zhipu and Zhang, Han and Yang, Bin and Di, Chong and Huang, Runhe},
+title = {Enhancing Knowledge-Aware Recommendation with Dual-Graph Contrastive Learning},
+journal = {Information},
+volume = {15},
+month = {sep.},
+year = {2024},
+pages = {534},
+}
+
+@inproceedings{Coll:fil,
+author = {He, Xiangnan and Liao, Lizi and Zhang, Hanwang and Nie, Liqiang and Hu, Xia and Chua, Tat-Seng},
+title = {Neural Collaborative Filtering},
+publisher = {International World Wide Web Conferences Steering Committee},
+month = {jul.},
+year = {2017},
+address = {Republic and Canton of Geneva, CHE},
+url = {https://doi.org/10.1145/3038912.3052569},
+booktitle = {},
 
 }
 
-@misc{Typy_Odp,
-    author = {Puneet Mangla},
-    title = {Netflix Movies and Series Recommendation Systems},
-    month = {July},
-    year = {2023},
-    howpublished = "\url{https://pyimagesearch.com/2023/07/03/netflix-movies-and-series-recommendation-systems/}",
 
+@inbook{Fil:obsah,
+author = {Lops, Pasquale and de Gemmis, Marco and Semeraro, Giovanni},
+title = {Content-based Recommender Systems: State of the Art and Trends},
+journal = {Recommender Systems Handbook},
+month = {feb.},
+year = {2011},
+pages = {73-105},
+publisher = {},
 }
 
-@misc{Typy_Odp_Ai,
-    author = {Zhong Hong},
-    title = {Personalized Recommendations: How Netflix and Amazon Use Deep Learning to Enhance User Experience},
-    month = {April},
-    year = {2023},
-    howpublished = "\url{https://medium.com/@zhonghong9998/personalized-recommendations-how-netflix-and-amazon-use-deep-learning-to-enhance-user-experience-e7bd6fcd18ff}",
-
-}
-
-@misc{Coll_Filter,
-    author = {CodeStax.Ai},
-    title = {Creating Netflix-Worthy Recommendations: The Collaborative Filtering Revolution},
-    month = {September},
-    year = {2023},
-    howpublished = "\url{https://codestax.medium.com/creating-netflix-worthy-recommendations-the-collaborative-filtering-revolution-a1765c5daec4}",
-
-}
-
-@misc{Obs_Filter,
-    author = {Shrishail Kandi},
-    title = {Content based movie recommendation system for Netflix using natural language processing},
-    month = {June},
-    year = {2021},
-    howpublished = "\url{https://shrishailkandi95.medium.com/content-based-movie-recommendation-system-for-netflix-using-natural-language-processing-53fdbcf94417}",
-
-}
-
-@misc{Ranking,
-    author = {Nihal D'Souza},
-    title = {How do Netflix recommendations work?},
-    month = {January},
-    year = {2021},
-    howpublished = "\url{https://nihaldsouza.medium.com/how-do-netflix-recommendations-work-a24385f66d80}",
-
-}
-
-@misc{Type:data,
-    author = {Lineate},
-    title = {5 Ways Netflix Uses Data to Win the World of Streaming Entertainment},
-    month = {February},
-    year = {2019},
-    howpublished = "\url{https://www.lineate.com/blog/5-ways-netflix-uses-data-to-win}",
-
-}
-
-@misc{Type:data_hd,
-    author = {Kamaljeet Kaur},
-    title = {Behind the Screen: How Netflix Uses Data Science?},
-    month = {Aughust},
-    year = {2024},
-    howpublished = "\url{https://www.analyticsvidhya.com/blog/2024/07/netflix-uses-data-science/#:~:text=Netflix%20uses%20its%20data%20to,and%20decide%20on%20content%20investments.}",
+@inbook{Fil:alg:obsah,
+author = {Pazzani, Michael and Billsus, Daniel},
+title = {Content-Based Recommendation Systems},
+month = {feb.},
+year = {2007},
+pages = {325-341},
+publisher = {},
 
 }
