--- a/literatura.bib
+++ b/literatura.bib
@@ -157,3 +157,10 @@ pages = {325-341},
 publisher = {},
 
 }
+
+@misc{DeepL,
+    author = "DeepL",
+    year = 2024, 
+    howpublished = {https://www.deepl.com/en/translator},
+    note = "Translations of several parts of the text"
+}
