--- a/literatura.bib
+++ b/literatura.bib
@@ -161,6 +161,6 @@ publisher = {},
 @misc{DeepL,
     author = "DeepL",
     year = 2024, 
-    howpublished = {https://www.deepl.com/en/translator},
+    howpublished = "\url{https://www.deepl.com/en/translator}",
     note = "Translations of several parts of the text"
 }
