--- a/clanok.tex
+++ b/clanok.tex
@@ -9,6 +9,7 @@
 \usepackage{xurl}
 \usepackage{cite}
 \usepackage{float}
+\usepackage{amsmath}
 
 \title{Algoritmy odporúčania filmov v Netflix\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2024/25, vedenie: Ing. Richard Marko, PhD}}
 
@@ -98,7 +99,11 @@ Táto technológia nielenže zvyšuje spokojnosť používateľov, ale podporuje
 Netflix používa rôzne typy filtrovania, ako je kolaboratívne filtrovanie, filtrovanie na zaklade obsahu\cite{Filtracne:algoritmy}, hybridné modely alebo odporúčania založené na hlbokom učení, ale v tomto článku sa budeme zaoberať len prvými dvoma, pretože sú najpoužívanejšie. 
 Rozdiel medzi nimi spoznáte podľa názvu, ale poďme sa na ne pozrieť bližšie.
 
-\textbf{Kolaboratívne filtrovanie} je algoritmus, ktorý sleduje, aké sú vaše preferencie pri výbere filmov, a na základe týchto údajov vás zoskupí s ostatnými ľuďmi, ktorí majú podobný vkus. Názornejšie, ako funguje, nájdete na \hyperref[Types:of:filtering]{Obr.3}, kde je graficky znázornená metóda kolaboratívneho filtrovania. Hoci sú na obrázku len 2 ľudia, v skutočnosti ich môže byť 100 alebo viac.\cite{Coll:fil} Hlavným problémom tohto systému je problém studeného štartu, ktorý sa objavuje ako dôsledok nedostatku údajov o používateľovi alebo filmoch v systéme. Tento problém sa rieši použitím niekoľkých typov filtrovania, ale Netflix sa naďalej snaží tento problém vyriešiť.Metóda kolaboratívneho filtrovania sa delí na dve ďalšie metódy, prvou je \textbf{Kolaboratívne filtrovanie založené na používateľovi}(v tabulke oznacene ako UBCF), zameriava sa na vyhľadávanie ľudí s podobným vkusom ako vy.\cite{Fil:alg:colab} Ako presne? Najprv vypočíta podobnosť medzi všetkými používateľmi a v závislosti od výsledku začne odporúčať filmy, ktoré ste ešte nevideli, pričom sa páčia ľuďom s podobným vkusom.
+\textbf{Kolaboratívne filtrovanie} je algoritmus, ktorý sleduje, aké sú vaše preferencie pri výbere filmov, a na základe týchto údajov vás zoskupí s ostatnými ľuďmi, ktorí majú podobný vkus. Algoritmus využíva matematické modely na hodnotenie podobnosti a predikciu preferencií. Jedným z príkladov výpočtu skóre podobnosti môže byť vzorec: 
+\[
+\frac{\arcsin^2(x)}{2} - \frac{\sqrt{1 - x^2} \cdot (x^2 + 2)}{3} + C
+\]
+Tu \textbf{x} predstavuje normalizovanú hodnotu pre konkrétny atribút alebo interakciu používateľa, zatiaľ čo \textbf{C} je konštanta upravujúca celkové skóre. Takéto výpočty pomáhajú algoritmu rozhodnúť, ktoré filmy alebo seriály budú odporučené používateľovi. Názornejšie, ako funguje, nájdete na \hyperref[Types:of:filtering]{Obr.3}, kde je graficky znázornená metóda kolaboratívneho filtrovania. Hoci sú na obrázku len 2 ľudia, v skutočnosti ich môže byť 100 alebo viac.\cite{Coll:fil} Hlavným problémom tohto systému je problém studeného štartu, ktorý sa objavuje ako dôsledok nedostatku údajov o používateľovi alebo filmoch v systéme. Tento problém sa rieši použitím niekoľkých typov filtrovania, ale Netflix sa naďalej snaží tento problém vyriešiť.Metóda kolaboratívneho filtrovania sa delí na dve ďalšie metódy, prvou je \textbf{Kolaboratívne filtrovanie založené na používateľovi}(v tabulke oznacene ako UBCF), zameriava sa na vyhľadávanie ľudí s podobným vkusom ako vy.\cite{Fil:alg:colab} Ako presne? Najprv vypočíta podobnosť medzi všetkými používateľmi a v závislosti od výsledku začne odporúčať filmy, ktoré ste ešte nevideli, pričom sa páčia ľuďom s podobným vkusom.
 Druhou čiastkovou metódou je Kolaboratívne \textbf{filtrovanie založené na položkách}(IBCF), líši sa tým, že nehľadá podobnosti medzi ľuďmi, ale medzi položkami, s ktorými ste komunikovali, a odporúča podobné. Ak sa vám napríklad páči film, v ktorom hral Robert Downey Jr, systém vám začne odporúčať filmy alebo seriály, v ktorých hral tento herec.
 Podrobnejšie, aký je medzi nimi rozdiel a aké aspekty zahŕňajú, si môžete pozrieť v nasledujúcej tabuľke.
 
@@ -124,7 +129,6 @@ Podrobnejšie, aký je medzi nimi rozdiel a aké aspekty zahŕňajú, si môžet
 
     \item \textbf{Systém Top-N Ranking} je založený na kombinácii kolaboratívneho a obsahového filtrovania. Ako už názov napovedá, poskytuje najlepšie hodnotené filmy, ktoré zodpovedajú vkusu používateľa. Je podobný ako PVR s tým rozdielom, že sa pozerá len na hodnotenie titulu. Netflix využíva Tento algoritmus aj na doplnenie riadkov, ako napríklad  “Pre teba“.
 
-    Ďalším algoritmom spoločnosti Netflix je 
     \item\textbf{Obľúbene medzi používateľmi}, ktorý predpovedá časové trendy na základe globálnych a regionálnych údajov o filmoch a televíznych seriáloch. Vo všeobecnosti existujú dva typy trendov: sezónne a špeciálne.Na základe názvu by ste mohli predpokladať, že čo je čo, ale poďme sa na ne pozrieť bližšie.
     
     Do sekcie \textbf{sezónnych trendov} sa zvyčajne zaraďujú filmy ako Sám doma alebo Polárny expres, pretože získavajú popularitu v období Vianoc, alebo horory počas Halloween.
